      - Added Representation.append(Appendable) method.
      - Deprecated Series.createSeries(...) method. Use constructor
        instead.
      - Added SecretVerifier.createUser(identifier) to allow creation
        of User subclasses if necessary.
      - Renamed JaxRsApplication.guard into authenticator to match the
        parameter Authenticator class.
    - New features
      - Added a CookieAuthenticator class in the org.restlet.ext.crypto
        extension to provide customizable and secure authentication via
        cookies, in a way that is as compatible as possible with HTTP
        challenge based authentication.
        Based on an initial contribution by Remi Dewitte.
      - Added org.restlet.service.ConnegService to provide a way to 
        control the content negotiation behavior at the application level.
        It offers two mode: strict and flexible (default) by other algorithms
        can be plugged by overriding this class and reusing the Conneg
        subclasses in the engine package. Suggested by David Bordoley.        
      - Improved Restlet annotation value syntax to support alternate 
        variants using '|' and combination of several metadata for a 
        single variant using '+' separator. Also, all metadata are now
        supported, not just media types.
      - Added support for URI query constraints in the value of Restlet
        method annotations such as @Get("form:json?light") or 
        @Get("?level=2"). This allows returning and serializing 
        different representation beans based on those parameters.
      - Added HTML extension that currently supports write HTML form
        in URL encoded or multipart form data. As a future replacement for 
        the org.restlet.data.Form class, it adds the ability to work with 
        multipart forms (currently writing only) with the same Java API.
        Some suggestions from John Logdson.
    - Bug fixed